--- a/views/profile2.pug
+++ b/views/profile2.pug
@@ -79,14 +79,44 @@ block content
                           .ticket-info
                             strong Purchased Ticket: 
                             span.text-success #{ticket.type}
+                            br
+                            small.text-muted GUID: #{ticket.guid}
+                            br
+                            small.text-muted Purchased: #{ticket.purchaseDate}
                           .ticket-status
                             small.text-success
                               i.material-symbols-outlined check_circle
                               |  Purchased
                 else
                   .text-center.text-muted
-                    p.mb-0 No purchased tickets found
-                    small You haven't purchased any tickets yet.
+                    p.mb-0 No purchased tickets found.
+
+        // Used Tickets Section
+        .row.mt-4
+          .col-12
+            .card.shadow-sm
+              .card-body
+                h4.profile.mb-3 My Used Tickets
+                
+                if userUsedTickets && userUsedTickets.length > 0
+                  .used-tickets
+                    each ticket in userUsedTickets
+                      .ticket-item.mb-2.p-2.border.rounded.bg-danger.bg-opacity-10
+                        .d-flex.justify-content-between.align-items-center
+                          .ticket-info
+                            strong Used Ticket: 
+                            span.text-danger #{ticket.type}
+                            br
+                            small.text-muted GUID: #{ticket.guid}
+                            br
+                            small.text-muted Purchased: #{ticket.purchaseDate}
+                          .ticket-status
+                            small.text-danger
+                              i.material-symbols-outlined done_all
+                              |  Used
+                else
+                  .text-center.text-muted
+                    p.mb-0 No used tickets found.
 
         footer.text-center.mt-4
           p &copy; 2025 - Profile Management System
